- ensure the token uri fetches are paginated - make the ui more crisp (elegibility loading)  - sort adventurer ids in reverse order  - fix revealing not setting

--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,10 @@ input[type="text"] {
   display          : inline-block;
   background-repeat: no-repeat;
 }
+
+@layer components {
+  .loading-ellipsis::after {
+    content  : "";
+    animation: ellipsis 1s infinite;
+  }
+}
